...

                <ImageView
                    android:id="@+id/top_bar_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
...
                
                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
...

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/event_title_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...

                <TextView
                    android:id="@+id/event_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/add_photo_button"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
...

                <ImageView
                    android:id="@+id/event_photo"
                    android:layout_width="95dp"
                    android:layout_height="85dp"
...

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/event_description_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
...

                <TextView
                    android:id="@+id/event_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <HorizontalScrollView
                    android:id="@+id/tags_scroll_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/add_tags_button"
                            android:layout_width="70dp"
                            android:layout_height="45dp"
...

                <TextView
                    android:id="@+id/event_start_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/event_start_date_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...
                    app:layout_constraintTop_toBottomOf="@id/event_start_datetime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/event_start_time_editText"/>

                <EditText
...

                <TextView
                    android:id="@+id/event_end_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/event_end_date_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...
                    app:layout_constraintTop_toBottomOf="@id/event_end_datetime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/event_end_time_editText"/>

                <EditText
...

                <TextView
                    android:id="@+id/event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/event_location_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...

                <TextView
                    android:id="@+id/registration_start_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/registration_start_date_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...
                    app:layout_constraintTop_toBottomOf="@id/registration_start_datetime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/registration_start_time_editText"/>

                <EditText
...

                <TextView
                    android:id="@+id/registration_end_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/registration_end_date_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...
                    app:layout_constraintTop_toBottomOf="@id/registration_end_datetime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/registration_end_time_editText"/>

                <EditText
...

                <TextView
                    android:id="@+id/event_attendants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/event_attendants_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...

                <TextView
                    android:id="@+id/event_waitlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/event_waitlist_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
...

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/geolocation_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/event_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                
                <ImageButton
                    android:id="@+id/event_public_button"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
...
                    app:layout_constraintTop_toBottomOf="@id/event_visibility"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/event_private_button"
                    android:background="@drawable/public_button"/>

...

        <ImageButton
            android:id="@+id/done_button"
            android:layout_width="300dp"
            android:layout_height="35dp"
...
