<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <LinearLayout
        android:id="@+id/customTopBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_button"
            app:tint="@null"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/edit_information"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"
            app:layout_constraintHorizontal_weight="1"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_new_name"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/new_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/yellow_outline_box"
        android:textColor="#000000"
        android:textSize="16sp"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customTopBar"/>

    <EditText
        android:id="@+id/et_new_email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/new_email"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow_outline_box"
        android:textColor="#000000"
        android:textSize="16sp"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_name" />

    <EditText
        android:id="@+id/et_new_phone"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="New Phone Number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow_outline_box"
        android:textColor="#000000"
        android:textSize="16sp"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_email" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/new_password"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow_outline_box"
        android:textColor="#000000"
        android:textSize="16sp"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_phone" />

    <ImageButton
        android:id="@+id/delete_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/delete_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/yellow_rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
